docs/7.52/md/abennews-71-logical_expressions.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-70_ehps.htm) →  [Changes in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71.htm) → 

Logical Expressions in Release 7.0, EhP2

[1\. Boolean functions](#!ABAP_MODIFICATION_1@1@)

[2\. Predicate functions](#!ABAP_MODIFICATION_2@2@)

[3\. New Boolean operator EQUIV](#!ABAP_MODIFICATION_3@3@)

Note

The program DEMO\_EXPRESSIONS shows examples of the logical expressions in Release 7.0, EhP2.

Modification 1

Boolean Functions

The new predefined [Boolean functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenboole_functions.htm) boolc and boolx accept logical expressions as arguments and return their truth values in the form of character strings or byte strings.

Modification 2

Predicate Functions

The new [predicate functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpredicate_functions.htm) return logical values and can be used like relational expressions. Predicate functions for character-like arguments were introduced in Release 7.0, EhP2.

Modification 3

New Boolean Operator EQUIV

The new Boolean operator [EQUIV](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogexp_equiv.htm) enables an equivalence relationship between two [logical expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogical_expression_glosry.htm "Glossary Entry").