docs/7.57/md/abennews-71-logical_expressions.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-70_ehps.htm) →  [News for Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Logical Expressions in Release 7.0, EhP2, ABENNEWS-71-LOGICAL_EXPRESSIONS, 757%0D%0A%
0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Logical Expressions in Release 7.0, EhP2

[1\. Boolean Functions](#!ABAP_MODIFICATION_1@1@)
[2\. Predicate Functions](#!ABAP_MODIFICATION_2@2@)
[3\. New Boolean Operator EQUIV](#!ABAP_MODIFICATION_3@3@)

Hint

The program DEMO\_EXPRESSIONS shows examples of the logical expressions in Release 7.0, EhP2.

Modification 1   

Boolean Functions

The new built-in [Boolean functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenboole_functions.htm) boolc and boolx accept logical expressions as arguments and return their truth values in the form of character strings or byte strings.

Modification 2   

Predicate Functions

The new [predicate functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpredicate_functions.htm) return truth values and can be used like relational expressions. Predicate functions for character-like arguments were introduced in Release 7.0, EhP2.

Modification 3   

New Boolean Operator EQUIV

The new Boolean operator [EQUIV](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlogexp_equiv.htm) enables an equivalence relationship between two [logical expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlogical_expression_glosry.htm "Glossary Entry").